--- a/src/index.less
+++ b/src/index.less
@@ -59,7 +59,6 @@ ul, li, p {
 }
 
 .Menu-list {
-    width: 311px;
     background: #fff;
     li {
         text-align: center;
@@ -76,6 +75,8 @@ ul, li, p {
 }
 .Menu-list-burger-block,
 .Menu-list-airplane-block {
+    max-width: 311px;
+    width:100%;
     display: none;
     position: absolute;
     z-index: 9999;
